destination pics alignment and position fixed; testimonials alignment fixed

--- a/style.css
+++ b/style.css
@@ -159,8 +159,10 @@ input {
   /* Set the display property to 'grid' and justify the content */
   display: grid;
   justify-content: center;
-  align-content: center;
+  place-items: center;
   grid-template-areas:
+    "single-destination single-destination single-destination"
+    "single-destination single-destination single-destination"
     "single-destination single-destination single-destination"
     "single-destination single-destination single-destination";
 }
@@ -170,8 +172,8 @@ input {
   /* Use the grid-template-columns property to set each column to 30% */
   /* You can experiment with different units for the width values */
   /* Hint: https://developer.mozilla.org/en-US/docs/Web/CSS/grid-template-columns */
-  grid-template-columns: 30%;
-  width: 80%;
+  grid-template-columns: repeat(3, auto);
+  width: 100%;
 }
 
 .section-title {
@@ -189,7 +191,7 @@ input {
   display: grid;
   align-items: center;
   justify-items: center;
-  margin: 10px;
+  margin: 5px;
   overflow: hidden;
 }
 
@@ -201,33 +203,36 @@ img {
 /* Let's take the training wheels off. Finish off the page by adding styles to the remaining blocks */
 
 .testimonial-area {
-  display: grid;
-  justify-content: center;
+  display: flex;
+  justify-content: space-evenly;
   align-content: center;
-  grid-template-areas: "single-testmonial single-testmonial single-testmonial";
   background-color: #383f50;
+  padding: 40px;
 }
 
 .single-testmonial {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin: 15px 25px;
   background-color: #f0f9fe;
   border-radius: 5px;
-  padding: 50px;
-  margin: 30px;
-  grid-auto-columns: minmax(0, 1fr);
-  grid-auto-flow: column;
+  padding: 20px;
 }
 
 .footer {
   background-color: #040e27;
   color: #fff;
   display: grid;
-  grid-template-areas: "footer-widget footer-widget";
-  grid-template-columns: 70%;
-  padding: 50px;
+  grid-template-areas: "footer-widget footer-widget footer-widget";
+  grid-template-columns: repeat(3, auto);
+  padding: 40px;
 }
 
 .footer-widget p {
   color: #aab1b6;
+  line-height: 1.5rem;
 }
 
 .footer-widget a:hover {
@@ -235,7 +240,7 @@ img {
 }
 
 .footer-widget ul li {
-  padding: 10px;
+  line-height: 1.5rem;
 }
 
 .footer-widget a {
